Exploring Occurrence Providers

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,9 @@
 pluginManagement {
     // Provide repositories to resolve plugins
     repositories {
-        maven { url "https://cache-redirector.jetbrains.com/plugins.gradle.org" }
-        maven { url "https://cache-redirector.jetbrains.com/dl.bintray.com/kotlin/kotlin-eap" }
-        maven { url "https://cache-redirector.jetbrains.com/myget.org.rd-snapshots.maven" }
+        maven { url = "https://cache-redirector.jetbrains.com/plugins.gradle.org" }
+        maven { url = "https://cache-redirector.jetbrains.com/dl.bintray.com/kotlin/kotlin-eap" }
+        maven { url = "https://cache-redirector.jetbrains.com/myget.org.rd-snapshots.maven" }
     }
     resolutionStrategy {
         eachPlugin {
