--- a/build.gradle
+++ b/build.gradle
@@ -4,20 +4,22 @@ import org.apache.tools.ant.taskdefs.condition.Os
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '2.0.0'  //  https://plugins.gradle.org/plugin/org.jetbrains.kotlin.jvm/1.8.21
-    id 'org.jetbrains.intellij' version '1.15.0'      // https://github.com/JetBrains/gradle-intellij-plugin/releases
+    //id 'org.jetbrains.intellij' version '1.17.4'      // https://github.com/JetBrains/gradle-intellij-plugin/releases
+    id 'org.jetbrains.intellij.platform' version '2.6.0'      // https://github.com/JetBrains/gradle-intellij-plugin/releases
+    id("org.jetbrains.intellij.platform.migration") version "2.6.0"
     id 'com.jetbrains.rdgen' version '2025.1.1'     // https://www.myget.org/feed/rd-snapshots/package/maven/com.jetbrains.rd/rd-gen
 }
 
 ext {
     isWindows = Os.isFamily(Os.FAMILY_WINDOWS)
     rdLibDirectory = {
-        new File(setupDependencies.idea.get().classes, "lib/rd")
+    //    new File(setupDependencies.idea.get().classes, "lib/rd")
     }
 }
 
 repositories {
-    maven { url 'https://cache-redirector.jetbrains.com/intellij-repository/snapshots' }
-    maven { url 'https://cache-redirector.jetbrains.com/maven-central' }
+    maven { url = 'https://cache-redirector.jetbrains.com/intellij-repository/snapshots' }
+    maven { url = 'https://cache-redirector.jetbrains.com/maven-central' }
 }
 
 wrapper {
@@ -108,13 +110,18 @@ buildPlugin {
     }
 }
 
-intellij {
-    type = 'RD'
+//intellij {
+//    type = 'RD'
+//    version = "${ProductVersion}"
+//    downloadSources = false
+//    instrumentCode = false
+//}
+
+intellijPlatform {
+    //type = 'RD'
     version = "${ProductVersion}"
-    downloadSources = false
+    //downloadSources = false
     instrumentCode = false
-    // TODO: add plugins
-    // plugins = ["uml", "com.jetbrains.ChooseRuntime:1.0.9"]
 }
 
 runIde {
@@ -123,7 +130,7 @@ runIde {
 
     // Rider's backend doesn't support dynamic plugins. It might be possible to work with auto-reload of the frontend
     // part of a plugin, but there are dangers about keeping plugins in sync
-    autoReloadPlugins = false
+    //autoReloadPlugins = false
 
     // gradle-intellij-plugin will download the default version of the JBR for the snapshot. Update if required
     // jbrVersion = "jbr_jcef-11_0_6b765.40" // https://confluence.jetbrains.com/display/JBR/Release+notes
