--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,8 @@ ProductVersion=2025.2-EAP1-SNAPSHOT
 # https://blog.jetbrains.com/kotlin/2020/07/kotlin-1-4-rc-released/#stdlib-default
 kotlin.stdlib.default.dependency=false
 
-//  See https://plugins.jetbrains.com/docs/intellij/using-kotlin.html#incremental-compilation
-kotlin.incremental.useClasspathSnapshot=false
+# Required to download Rider artifacts from Maven (and not "binary" releases from CDN).
+org.jetbrains.intellij.platform.buildFeature.useBinaryReleases=false
+
+# See https://plugins.jetbrains.com/docs/intellij/using-kotlin.html#incremental-compilation
+# kotlin.incremental.useClasspathSnapshot=false
