--- a/test-solution/DotNetCore6Project/DotNetCore6_Domain.csproj
+++ b/test-solution/DotNetCore6Project/DotNetCore6_Domain.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mediator.Abstractions" Version="2.1.7" />
     <PackageReference Include="MediatR" Version="12.3.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Requests\Issue65\" />
   </ItemGroup>
 
 </Project>
