--- a/test-solution/DotNetCore6Project/DotNetCore6_Domain.csproj
+++ b/test-solution/DotNetCore6Project/DotNetCore6_Domain.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Mediator.Abstractions" Version="2.1.7" />
-    <PackageReference Include="MediatR" Version="12.3.0" />
+    <PackageReference Include="Mediator.Abstractions" Version="3.0.0-preview.65" />
+    <PackageReference Include="MediatR" Version="12.5.0" />
   </ItemGroup>
 
 </Project>
